--- a/index.html
+++ b/index.html
@@ -7,7 +7,37 @@
     <title>GLPG Style Guidelines</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="container">
+      <h1 style="font-size: var(--fontSize__h0)">
+        Great Lakes Psychology Group
+      </h1>
+      <h1>Great Lakes Psychology Group</h1>
+      <h2>Great Lakes Psychology Group</h2>
+      <h3>Great Lakes Psychology Group</h3>
+      <h4>Great Lakes Psychology Group</h4>
+      <h5>Great Lakes Psychology Group</h5>
+      <p>
+        At GLPG, we value helping our clients find the right therapist for them.
+        Therapy is not <a href="#">one-size-fits-all</a>, which is why our
+        clinical staff consists of doctoral and master’s level psychologists,
+        social workers, counselors, and marriage and family therapists to fit a
+        wide range of problem areas.
+      </p>
+      <p>
+        Our licensed professionals make knowledgeable
+        <strong>assessments and provide</strong> evidence-based treatments to
+        help those struggling with depression, anxiety, relationship issues,
+        grief, stress, eating disorders, abuse, chronic pain, PTSD, ADD/ADHD,
+        and much more. With a diverse team of specialists, we are committing to
+        helping our clients find the perfect fit.
+      </p>
+      <ul>
+        <li>Example list item</li>
+        <li>Example list item</li>
+        <li>Example list item</li>
+        <li>Example list item</li>
+      </ul>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
