Add button styles

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <li>Example list item</li>
         <li>Example list item</li>
       </ul>
+      <button>Button</button>
+      <a href="#" class="button">Button Link</a
+      ><!-- /.button -->
     </div>
     <script type="module" src="/main.js"></script>
   </body>
