--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>
     <div class="container">
       <h1 style="font-size: var(--fontSize__h0)">
-        Great Lakes Psychology Group
+        Great Lakes Psychology Group (H0)
       </h1>
-      <h1>Great Lakes Psychology Group</h1>
-      <h2>Great Lakes Psychology Group</h2>
-      <h3>Great Lakes Psychology Group</h3>
-      <h4>Great Lakes Psychology Group</h4>
-      <h5>Great Lakes Psychology Group</h5>
+      <h1 style="margin-top: 3rem">Great Lakes Psychology Group (H1)</h1>
+      <h2>Great Lakes Psychology Group (H2)</h2>
+      <h3>Great Lakes Psychology Group (H3)</h3>
+      <h4>Great Lakes Psychology Group (H4)</h4>
+      <h5>Great Lakes Psychology Group (H5)</h5>
       <p>
         At GLPG, we value helping our clients find the right therapist for them.
         Therapy is not <a href="#">one-size-fits-all</a>, which is why our
@@ -38,8 +38,18 @@
         <li>Example list item</li>
       </ul>
       <button>Button</button>
-      <a href="#" class="button">Button Link</a
-      ><!-- /.button -->
+      <a href="#" class="button">Button Link</a>
+      <h2>Fields</h2>
+      <input type="text" placeholder="Text input" />
+      <div class="select-wrap">
+        <select name="" id="" required>
+          <option value="" selected disabled>Select an option</option>
+          <option value="">Option 1</option>
+          <option value="">Option 2</option>
+          <option value="">Option 3</option></select
+        ><!-- /# -->
+      </div>
+      <!-- /.select-wrap -->
     </div>
     <script type="module" src="/main.js"></script>
   </body>
