--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       </ul>
       <button>Button</button>
       <a href="#" class="button">Button Link</a>
+      <button class="button--secondary">Secondary</button>
       <h2>Fields</h2>
       <input type="text" placeholder="Text input" />
       <div class="select-wrap">
