--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <li>Example list item</li>
       </ul>
       <button>Button</button>
-      <a href="#" class="button">Button Link</a>
-      <button class="button--secondary">Secondary</button>
+      <a href="#" class="btn">Button Link</a>
+      <button class="btn btn--secondary">Secondary</button>
       <div class="subheader-temp">Subheader</div>
       <h2>Fields</h2>
       <input type="text" placeholder="Text input" />
