--- a/index.html
+++ b/index.html
@@ -14,50 +14,196 @@
   </head>
   <body>
     <div class="container">
-      <h1 style="font-size: var(--fontSize__h0)">
-        Great Lakes Psychology Group (H0)
-      </h1>
-      <h1 style="margin-top: 3rem">Great Lakes Psychology Group (H1)</h1>
-      <h2>Great Lakes Psychology Group (H2)</h2>
-      <h3>Great Lakes Psychology Group (H3)</h3>
-      <h4>Great Lakes Psychology Group (H4)</h4>
-      <h5>Great Lakes Psychology Group (H5)</h5>
-      <p>
-        At GLPG, we value helping our clients find the right therapist for them.
-        Therapy is not <a href="#">one-size-fits-all</a>, which is why our
-        clinical staff consists of doctoral and master’s level psychologists,
-        social workers, counselors, and marriage and family therapists to fit a
-        wide range of problem areas.
-      </p>
-      <p>
-        Our licensed professionals make knowledgeable
-        <strong>assessments and provide</strong> evidence-based treatments to
-        help those struggling with depression, anxiety, relationship issues,
-        grief, stress, eating disorders, abuse, chronic pain, PTSD, ADD/ADHD,
-        and much more. With a diverse team of specialists, we are committing to
-        helping our clients find the perfect fit.
-      </p>
-      <ul>
-        <li>Example list item</li>
-        <li>Example list item</li>
-        <li>Example list item</li>
-        <li>Example list item</li>
-      </ul>
-      <button>Button</button>
-      <a href="#" class="btn">Button Link</a>
-      <button class="btn btn--secondary">Secondary</button>
-      <div class="subheader-temp">Subheader</div>
-      <h2>Fields</h2>
-      <input type="text" placeholder="Text input" />
-      <div class="select-wrap">
-        <select name="" id="" required>
-          <option value="" selected disabled>Select an option</option>
-          <option value="">Option 1</option>
-          <option value="">Option 2</option>
-          <option value="">Option 3</option></select
-        ><!-- /# -->
+      <!-- Typography -->
+
+      <!-- Title -->
+      <div
+        data-type="Title"
+        class="ft--theme--Typography--title ft--Text--base root ft--e7--root ft--pos--e7 resizer-wrap resizer-wrap-e7 ftb-resizers Typography ftb-resizerNoBorder disable size--fix no--hover"
+        draggable="false"
+        style="
+          box-sizing: content-box;
+          opacity: 1;
+          place-content: stretch;
+          align-items: stretch;
+        "
+      >
+        <div class="ft--control--root">
+          <div
+            class="ft--component-wrap ft--theme--Typography--title ft--Text--base root ft--e7--root ft--pos--e7 ft--Text--base rootPlain ft--scroll--content"
+          >
+            Title
+          </div>
+        </div>
       </div>
-      <!-- /.select-wrap -->
+
+      <!-- Heading -->
+      <div
+        data-type="Heading"
+        class="ft--theme--Typography--h1 ft--Text--base root ft--e8--root ft--pos--e8 resizer-wrap resizer-wrap-e8 ftb-resizers Typography ftb-resizerNoBorder disable size--fix no--hover"
+        draggable="false"
+        style="
+          box-sizing: content-box;
+          opacity: 1;
+          place-content: stretch;
+          align-items: stretch;
+        "
+      >
+        <div class="ft--control--root">
+          <div
+            id="e8"
+            data-search="true"
+            data-id="e8:null"
+            class="ft--component-wrap ft--theme--Typography--h1 ft--Text--base root ft--e8--root ft--pos--e8 ft--Text--base rootPlain ft--scroll--content"
+          >
+            Heading
+          </div>
+        </div>
+      </div>
+
+      <!-- Subheading -->
+      <div
+        data-type="Subhead"
+        class="ft--theme--Typography--subhead ft--Text--base root ft--e9--root ft--pos--e9 resizer-wrap resizer-wrap-e9 ftb-resizers Typography ftb-resizerNoBorder disable size--fix no--hover"
+        draggable="false"
+        style="
+          box-sizing: content-box;
+          opacity: 1;
+          place-content: stretch;
+          align-items: stretch;
+        "
+      >
+        <div class="ft--control--root">
+          <div
+            id="e9"
+            data-search="true"
+            data-id="e9:null"
+            class="ft--component-wrap ft--theme--Typography--subhead ft--Text--base root ft--e9--root ft--pos--e9 ft--Text--base rootPlain ft--scroll--content"
+          >
+            Subhead
+          </div>
+        </div>
+      </div>
+
+      <!-- Buttons -->
+      <!-- Primary Button -->
+      <div
+        data-type="Button"
+        class="ft--theme--Button--primary ft--e14--root ft--pos--e14 resizer-wrap resizer-wrap-e14 ftb-resizers Button ftb-resizerNoBorder disable size--fix no--hover"
+        draggable="false"
+        style="
+          text-transform: inherit;
+          box-sizing: content-box;
+          opacity: 1;
+          place-content: stretch;
+          align-items: stretch;
+        "
+      >
+        <div class="ft--control--root">
+          <button
+            class="MuiButtonBase-root-143 ft--component-wrap ft--theme--Button--primary ft--e14--root ft-dis-brd"
+            tabindex=""
+            type="button"
+            role="button"
+            aria-label="Button"
+            style="text-transform: inherit"
+          >
+            <div class="full-width"><span id="e14-lbl">Button</span></div>
+            <span class="MuiTouchRipple-root-155"></span>
+          </button>
+        </div>
+      </div>
+
+      <!-- Secondary Button -->
+      <div
+        data-type="Button"
+        class="ft--theme--Button--secondary ft--e15--root ft--pos--e15 resizer-wrap resizer-wrap-e15 ftb-resizers Button ftb-resizerNoBorder disable size--fix no--hover"
+        draggable="false"
+        style="
+          text-transform: inherit;
+          box-sizing: content-box;
+          opacity: 1;
+          place-content: stretch;
+          align-items: stretch;
+        "
+      >
+        <div class="ft--control--root">
+          <button
+            class="MuiButtonBase-root-143 ft--component-wrap ft--theme--Button--secondary ft--e15--root ft-dis-brd"
+            tabindex=""
+            type="button"
+            role="button"
+            data-search="true"
+            aria-label="Button"
+            style="text-transform: inherit"
+          >
+            <div class="full-width"><span id="e15-lbl">Secondary</span></div>
+            <span class="MuiTouchRipple-root-155"></span>
+          </button>
+        </div>
+      </div>
+
+      <!-- Inputs -->
+      <!-- Text Input -->
+      <div
+        data-type="Input Fields"
+        class="ft--theme--FormField-container ft--theme--FormField--text ft--theme--FormField--outlined ft--theme--FormField--ftclassic ft--e27--root ft--pos--e22 resizer-wrap resizer-wrap-e22 ftb-resizers FormField ftb-resizerNoBorder disable no--hover"
+        draggable="false"
+        style="
+          text-transform: inherit;
+          box-sizing: content-box;
+          opacity: 1;
+          place-content: stretch;
+          align-items: stretch;
+        "
+      >
+        <div class="ft--control--root">
+          <div class="ft--form--elem--wrap">
+            <div
+              class="MuiFormControl-root-85 MuiTextField-root-84 ft--theme--FormField-container ft--theme--FormField--text ft--theme--FormField--outlined ft--theme--FormField--simpleText ft--theme--FormField--ftclassic ffd-e22 ft--theme--FormField--size-medium ft--e27--root"
+              id="e22"
+            >
+              <label
+                class="MuiFormLabel-root-97 MuiInputLabel-root-89 ft--label ft--shrink ft--classic--label ft--e27--root--label MuiInputLabel-formControl-91 MuiInputLabel-animated-94 MuiInputLabel-shrink-93 ft--shrink MuiInputLabel-outlined-96"
+                data-shrink="true"
+                for="controle22"
+                id="controle22-label"
+                >Text field</label
+              >
+              <div
+                class="MuiInputBase-root-113 MuiOutlinedInput-root-101 ft--theme--FormField-elRoot MuiInputBase-formControl-114"
+              >
+                <input
+                  aria-invalid="false"
+                  autocomplete="on"
+                  id="controle22"
+                  placeholder="Text field"
+                  type="text"
+                  title=""
+                  tabindex=""
+                  decimaldigits="0"
+                  decimalsymbol="."
+                  thousandsymbol=","
+                  aria-labelledby="controle22-label"
+                  dir="ltr"
+                  class="MuiInputBase-input-121 MuiOutlinedInput-input-108 ft-input"
+                  value=""
+                />
+                <fieldset
+                  aria-hidden="true"
+                  class="jss151 MuiOutlinedInput-notchedOutline-107 ftnotchedOutline ftnotchedOutline-classic"
+                >
+                  <legend class="jss153 jss154"><span>Text field</span></legend>
+                </fieldset>
+              </div>
+              <p class="ft-helper-txt Mui-error">fdsfd</p>
+              <!-- /.ft-helper-txt Mui-error -->
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- End -->
     </div>
     <script type="module" src="/main.js"></script>
   </body>
